2000-10-26  Kalle Marjola  <rpr@wapit.com>

	* gwlib/conffile.c (config_sanity_check): make sure that there are
	smsc group(s) and sms-service group(s) if there is smsbox set.

2000-10-26  Lars Wirzenius  <liw@iki.fi>

	* gwlib/http.c: Converted to use conn.c. This is a minimal change,
	and does not yet do multiple transactions in parallel.

2000-10-26  Lars Wirzenius  <liw@iki.fi>

	* gw/smsbox.c: Get client IP using http_socket_ip, instead of
	http_socket_fd. http_socket_fd will be reserved for getting the
	file descriptor for the HTTP server port only, and may ultimately
	go away completely.
	
	* gw/smsbox_req.c: Bugfix. We gave the allow list as the deny
	list when checking for sendsms client authorization.

2000-10-26  Kalle Marjola  <rpr@wapit.com>

	* doc/userguide/userguide.xml: added (m) 'mandatory' and (c)
	'conditionally mandatory) markings to all configuration file
	variables. 
	
2000-10-26  Kalle Marjola  <rpr@wapit.com>

	* gw/smsbox_req.c: fixed that messages with no translation are
	handled correctly

2000-10-25  Lars Wirzenius  <liw@iki.fi>

	* gw/wml_definitions.h: Commented out OPAQUE, since Cygwin
	(via some Windows header) defines it, and it isn't being used,
	anyway.  This is an intermin solution, a better one would be to
	add something like a WML_ or WBXML_ prefix to all those tokens.

	* gw/wtp_resp_state-decl.h: Renamed WAIT_TIMEOUT to
	WAIT_TIMEOUT_STATE to get rid of name conflicts with Cygwin
	headers.
	
	* gwlib/socket.c, test/fakewap.c: Removed an include for
	netinet/tcp.h, which seems to a) not be needed under Linux and b)
	be unknown to Richard Stevens, so presumably it is non-portable.
	If it proves to be necessary, we'll add it to configure and
	include it conditionally.
	
	* Thanks to Stipe Tolj for pointing these out.

2000-10-25  Lars Wirzenius  <liw@iki.fi>

	* configure{,.in}: Check for pthread_exit instead of
	pthread_create, when looking for a Posix thread implementation.