@@ -159,6 +159,8 @@ gwlib/counter.c -text
 gwlib/counter.h -text
 gwlib/date.c -text
 gwlib/date.h -text
+gwlib/dict.c -text
+gwlib/dict.h -text
 gwlib/gw-getopt.h -text
 gwlib/gwassert.h -text
 gwlib/gwlib.c -text
