@@ -1,3 +1,9 @@
+2000-10-26  Lars Wirzenius  <liw@iki.fi>
+
+    	* gwlib/dict.[ch]: Wrote.
+
+	* gwlib/gwlib.h: Include dict.h.
+
 2000-10-26  Kalle Marjola  <rpr@wapit.com>
 
 	* gwlib/conffile.c (config_sanity_check): make sure that there are
